Fixed day layout bug of not correct day of week, and added adjustable text font

--- a/src/Components/DayObject/DayObjectStyle.css
+++ b/src/Components/DayObject/DayObjectStyle.css
@@ -10,6 +10,12 @@
     border: 1px solid black;
     box-sizing: border-box;
   }
+
+  .dayObject.placeholder {
+    background-color: #c0c0c0;
+    opacity: 0.5; 
+    border: none;
+  }
   
   .dayObject__header {
     margin-bottom: 5px;
